name:                baselang
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/baselang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Baselang 
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , bytestring
                     , time
                     , hxt
                     , HandsomeSoup
                     , transformers
                     , async

executable baselang
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , baselang
                     , wreq
                     , lens
                     , bytestring
                     , time
                     , hxt
                     , HandsomeSoup
                     , transformers
                     , async
